--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
                     <h1>Hi, I'm <span>Neo Onyedire</span></h1>
             
                 <div class="text-animate">
-                    <h3>Fullstack Developer</h3>
+                    <h3>Fullstack Dev</h3>
                 </div>
                 <div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus at cupiditate laborum 
