--- a/portfolio.html
+++ b/portfolio.html
@@ -36,12 +36,12 @@
                     <h1>Hi, I'm <span>Neo Onyedire</span></h1>
             
                 <div class="text-animate">
-                    <h3>Fullstack Dev</h3>
+                    <h3>Fullstack Developer</h3>
                 </div>
                 <div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus at cupiditate laborum 
-                        quae facere debitis ipsam quasi, natus quibusdam officiis fugit repellat veniam totam asperiores 
-                        doloremque nobis</p>
+                    <p>Passionate about building seamless, efficient, 
+                        and impactful digital experiences.
+                         Always learning, innovating, and refining to create solutions that stand out.</p>
                 </div>
 
                 <div class="btn-box">
