--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="portfolio.css">
 
     <!--box icons-->
-    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
    
 <body>
@@ -19,7 +19,7 @@
     <header class="header">
         <a href="#" class="logo">Neo.</a>
 
-        <div class="bx bx-menu" id="menu-icon"></div>
+        <div class="bx bx-menu" id="menu-icon"><i class='bx bx-menu'></i></div>
 
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
@@ -50,10 +50,10 @@
                 </div>
             </div>
 
-            <div class="home sci">
+            <div class="home-sci">
                 <a href="#"><i class='bx bxl-facebook'></i></a>
                 <a href="#"><i class='bx bxl-twitter'></i></a>
-                <a href="#"><i class='bx bxl-linkedin'></i></a>
+                <a href="#"><i class='bx bxl-linkedin' ></i></a>
             </div>
      </section>
      
