--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
 
                 <div class="btn-box">
                    <a href="#" class="btn">Hire Me</a>
-                   <a href="#" class="btn">Let's Talk</a>
+                   <a href="#" class="btn">Let's Talk!</a>
                 </div>
             </div>
 
